--- a/main.html
+++ b/main.html
@@ -10,7 +10,8 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<h1>Why I want to become a developer?</h1>
+	<p>There are always new tools to acquire and better ways of developing software. Software developers need to spend a considerable amount of time keeping up to date with the latest news and developments in their industry so that they can create the best possible products.</p>
 </body>
 
 </html>
